# CGBN

./: CMakeLists.txt
include/cgbn/: cgbn.h  cgbn_cuda.h  cgbn_mpz.h
include/cuNTT/: arithmetic.cuh  common.cuh  cuNTT.hpp  radix2.cuh  radix4.cuh
include/cuSHA/: sha  sha256.cu
src/: cuNTT.cu  cuSHA.cu
